# Analyzing-a-Network-of-Facebook-Users

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bake.sh  cmake_install.cmake  main.sh  run.sh  test.sh  workspace.code-workspace
DSets/: CMakeLists.txt  Makefile  cmake_install.cmake  main-dsets
DSets/includes/: DSets.h
Network/: CMakeLists.txt  test-network
Person/: CMakeLists.txt
Project/: Makefile  cmake_install.cmake
catch2-build/: Makefile  cmake_install.cmake
catch2-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
catch2-subbuild/catch2-populate-prefix/tmp/: catch2-populate-gitclone.cmake  catch2-populate-gitupdate.cmake
data/: less_connected_data.txt  test_bigger_data.txt  test_data.txt
docs/: FinalProjectProposal.md  TeamworkContract.md  WrittenReport.md  log.md
feedback/: logFeedback.md  proposalFeedback.md
functions/: CMakeLists.txt  Makefile  cmake_install.cmake  main-functions  main.cpp  test-functions
functions/includes/: functions.hpp
functions/src/: functions.cc
functions/tests/: test-functions.cpp
graphTraversal/: test-traversal
src/: BFSTraversal.txt  CMakeLists.txt  MinimalSpanningTree.txt  main-project  main.cpp
